<resources>
    <string name="app_name">VendasJava</string>
    <string name="hint_senha">senha</string>
    <string name="hint_email">Email</string>
    <string name="contentDescription">Logo da empresa</string>
    <string name="bt_signin">Sign In</string>
    <string name="bt_signup">Sign Up</string>

    <string name="password_fail">Senha não cadastrada.</string>
    <string name="email_fail">Email não cadastrado.</string>
    <string name="email_already">Email já cadastrado.</string>
    <string name="signup_fail">Não foi possível enviar o e-mail de reset.</string>

    <string name="hint_estoque">Estoque</string>
    <string name="hint_nome">Nome</string>
    <string name="content_description_foto_produto">foto do produto</string>
    <string name="hint_valor">Valor</string>

    <string name="action_settings">Configurações</string>
    <string name="menu_nav_carrinho">Carrinho</string>
    <string name="menu_nav_lista_de_clientes">Clientes</string>
    <string name="menu_nav_produto_admin">Produtos</string>
    <string name="menu_nav_cliente_admin">Clientes</string>
    <string name="menu_nav_usuario_admin">Usuários</string>
    <string name="menu_nav_sobre">Sobre</string>
    <string name="menu_nav_sair">Sair</string>
    <string name="menu_vender">Vender</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="title_menu_lercodigodebarras">Ler código de barras</string>
    <string name="hint_nome_searchview">nome</string>
    <string name="hint_dados_basicos_do_cliente">Dados básicos do cliente</string>
    <string name="hint_nome_do_cliente">Nome do cliente</string>
    <string name="content_description_foto_do_cliente">foto do cliente</string>
    <string name="foto_do_produto">Foto do produto</string>
    <string name="hint_valor_produto">R$: 00,00</string>
    <string name="hint_nome_produto">Nome Produto</string>
    <string name="hint_estoque_produto">Estoque: 00</string>
    <string name="bt_vender">Vender</string>
    <string name="hint_descricao_produto">Descrição do Produto</string>
    <string name="hint_quantos">Quantos?</string>
    <string name="hint_vendedor">vendedor@email.com</string>
    <string name="label_estoque">Estoque:</string>
    <string name="title_selecionar_cliente">Confirma este cliente?</string>
    <string name="message_nome_cliente">nome</string>
    <string name="message_cpf_cliente">CPF:</string>
    <string name="alertdialog_sim">Sim</string>
    <string name="alertdialog_nao">Não</string>
    <string name="toast_cliente_selecionado">Cliente selecionado.</string>
    <string name="snack_operacao_cancelada">Operação cancelada.</string>
    <string name="toast_adicionado_ao_carrinho">Adicionado ao carrinho.</string>
    <!-- Barcode -->

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This aication cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="hint_sobrenome_cliente">hint_sobrenome_cliente</string>
    <string name="hint_nome_cliente">Nome do cliente</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Cadastro</string>
    <string name="senha">senha</string>
    <string name="email">senha</string>
    <string name="todo">todo</string>
    <string name="Sobrenome_cliente">Sobrenome Cliente</string>
    <string name="Nome_cliente">Nome Cliente</string>
    <string name="CPF_cliente">CPF Cliente</string>
    <string name="title_activity_navig">Navig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="r_00_00">R$ 00.00</string>
    <string name="nome_e_sobrenome_do_cliente">Nome e sobrenome do cliente</string>
    <string name="tv_title_sobre">Sobre o Sistema</string>
    <string name="tv_sobre">Sistema de gerenciamento de vendas e estoque desenvolvido por Eduardo Borges como critério avaliativo da cadeira de Programação de Dispositivos Móveis, ministrada pelo professor Vagner Pinto.</string>
    <string name="tv_esqueceu_senha">Esqueceu a senha?</string>
    <string name="snack_ins_email">Insira um E-mail no campo</string>
    <string name="toast_problemas_signin">Não foi possível realizar o Login</string>
    <string name="tv_adm_group">Administração</string>
    <string name="tv_vendas_group">Vendas</string>
    <string name="tv_app_group">Opções</string>
    <string name="label_quantidade">Quantidade</string>
    <string name="label_codigo_de_barras">Código de Barras</string>
    <string name="hint_codigo_de_barras">Código de Barras do produto</string>
    <string name="label_nome">Nome</string>
    <string name="label_descricao">Descrição</string>
    <string name="label_valor">Valor</string>
    <string name="hint_digite_valor">Digite o valor</string>
    <string name="hint_quantidade_digite">Digite a quantidade</string>
    <string name="bt_salvar">Salvar</string>
    <string name="titulo_galeria_imagem">Escolha uma Imagem</string>
    <string name="toast_produto_nao_cadastrado">Produto não cadastrado.</string>
    <string name="snack_preencher_todos_campos">Preencha todos os campos</string>
    <string name="toast_codigo_barras_ja_cadastrado">Código de Barras já cadastrado</string>
    <string name="toast_produto_salvo">Produto cadastrado com sucesso</string>
    <string name="snack_operacao_falhou">Não foi possível cadastrar o produto</string>
    <string name="toast_produto_atualizado">Produto atualizado com sucesso</string>
    <string name="toast_produto_nao_att">Não foi possível atualizar o produto</string>
    <string name="bt_ver_pedidos">Pedidos</string>
    <string name="hint_cpf">CPF do cliente</string>
    <string name="hint_sobrenome">Sobrenome do cliente</string>
    <string name="hint_codigo_de_barras_cliente">Código de barras do cliente</string>
    <string name="tv_funcao">Função do usuário</string>
    <string name="btCadastrarUser">Cadastrar</string>
    <string name="user_cadastrado">Usuário cadastrado com sucesso</string>
    <string name="nao_cadastro_user">Não foi possível cadastrar o usuário</string>
    <string name="lista_de_users">Lista de Usuários</string>
    <string name="hint_funcao">Função</string>
    <string name="hint_nome_user">Nome</string>
    <string name="title_selecionar_usuario">Selecionar Usuário</string>
</resources>